--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <div id="app"></div>
   
+  <div class="main-container">
+    <div class="filter-container"></div>
+    <div class="student-container"></div>
+    <div class="expelled-container"></div>
+  </div>
+
 
 
 
