--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <div id="app"></div>
   
-  <div class="main-container">
-    <div class="filter-container"></div>
-    <div class="student-container"></div>
-    <div class="expelled-container"></div>
-  </div>
+    <div id="form-container"></div>
+    <div id="filter-container"></div>
+    <div id="student-container"></div>
+    <div id="expelled-container"></div>
+   
+  
 
 
 
