--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div id="filter-container"></div>
     <div id="student-container"></div>
     <div id="expelled-container"></div>
+    <div id="expelled-cards"></div>
+    
    
   
 
